# catan-bench

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  REAMDE.md  dashboard.py  pyproject.toml
.github/workflows/: ci.yml
.junie/: AGENTS.md  guidelines.md
configs/: game.toml  groq-players.toml  local-players.toml  mixed-players.toml  openai-players.toml  openrouter-players.toml  players.toml  togetherai-players.toml  togetherai-qwen-players.toml
configs/elo-games/: README.md  game-common.toml
configs/elo-games/13-model-group/: README.md  game-01.toml  game-02.toml  game-03.toml  game-04.toml  game-05.toml  game-06.toml  game-07.toml  game-08.toml  game-09.toml  game-10.toml  game-11.toml  game-12.toml  game-13.toml  game-common.toml
configs/elo-games/8-model-group/: game-01.toml  game-02.toml  game-03.toml  game-04.toml  game-common.toml
configs/elo-games/openrouter-8-model-minimal/: README.md  game-01.toml  game-02.toml  game-03.toml  game-04.toml  game-05.toml  game-06.toml  game-common.toml
docs/: PROJECT_NOTES.md
src/catan_bench/: __init__.py  analysis.py  benchmark.py  benchmark_dashboard.py  catanatron_adapter.py  cleanup_runs.py  config.py  dashboard.py  engine.py  llm.py  observations.py  orchestrator.py  players.py  prompting.py  prompts.py  replay.py  reporter.py  run_dirs.py  runner.py  schemas.py  storage.py
src/catan_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/catan_bench/templates/: choose_action_system.jinja  choose_action_user.jinja  opening_strategy_system.jinja  opening_strategy_user.jinja  post_game_chat_system.jinja  post_game_chat_user.jinja  reactive_action_system.jinja  reactive_action_user.jinja  repair_action_system.jinja  repair_action_user.jinja  trade_chat_open_system.jinja  trade_chat_open_user.jinja  trade_chat_owner_decision_user.jinja  trade_chat_reply_system.jinja  turn_end_system.jinja  (+6 more)
tests/: conftest.py  test_analysis.py  test_benchmark.py  test_catanatron_adapter.py  test_cleanup_runs.py  test_config_and_runner.py  test_dashboard.py  test_llm.py  test_orchestrator.py  test_players.py  test_replay.py  test_reporter.py
(+21 files in other folders)
