[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "catan-bench"
version = "0.2.0"
description = "Harness for benchmarking LLM players in multi-player Settlers of Catan."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Alexandre Maraval" }
]
dependencies = [
    "python-dotenv>=1.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
