[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "catan-bench"
version = "1.2.0"
description = "Harness for benchmarking LLM players in multi-player Settlers of Catan."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Alexandre Maraval" }
]
dependencies = [
    "jinja2>=3.1.6",
    "plotly>=6.6.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.55.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"catan_bench" = ["templates/*.jinja", "templates/partials/*.jinja"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "ruff>=0.13.1",
]
dashboard = [
    "streamlit>=1.44.0",
]

[tool.ruff]
target-version = "py311"
